--- a/style.css
+++ b/style.css
@@ -1,3 +1,58 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 h1 {
     color: rgb(238, 0, 0);
-}   
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.gameboard {
+    border: 2px solid black;
+    width: 600px;
+    height: 600px;
+    padding: 2px;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 1fr;
+    grid-gap: 2px;
+}
+
+.cell {
+    border: 2px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 5rem;
+    background-color: rgb(131, 141, 122);
+
+    & :hover {
+        border: 2px solid black;
+    }
+}
+
+.cell > span {
+    width: 100%;
+    height: 100%;
+
+    background-size: 60%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.cell.xMark > span {
+    background-image: url(./img/cross.svg);
+
+}
+
+.cell.oMark > span{
+    background-image: url(./img/circle.svg);
+}
