Add module: Enables playing via user interface
Implemented 'ScreenController' module which enables playing by
interacting with the DOM. It receives the board and game information
then updates the visual gameboard using the `updateDisplay` function.

--- a/style.css
+++ b/style.css
@@ -33,26 +33,22 @@ body {
     align-items: center;
     font-size: 5rem;
     background-color: rgb(131, 141, 122);
+    background-size: 60%;
+    background-repeat: no-repeat;
+    background-position: center;
 
     & :hover {
         border: 2px solid black;
     }
 }
 
-.cell > span {
-    width: 100%;
-    height: 100%;
-
-    background-size: 60%;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.cell.xMark > span {
+.cell.xMark {
     background-image: url(./img/cross.svg);
 
 }
 
-.cell.oMark > span{
+.cell.oMark {
     background-image: url(./img/circle.svg);
 }
+
+
