Add feature: Highlight completed row upon victory
Implemented feature which indicates the row the winner completed.
Added `isWinningCell` property to `Cell` objects, default to false. The
gameController set cells that are in the completed row to
`isWinningCell = true`. The `screenController` highlights the cell if it
detects the cell is a winning cell.

--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@ body {
     & :hover {
         border: 2px solid black;
     }
+
+    &.winning-cell {
+        color: orange;
+        font-weight: 900;
+    }
 }
 
 .cell.xMark {
@@ -50,5 +55,4 @@ body {
 .cell.oMark {
     background-image: url(./img/circle.svg);
 }
-
 
