--- a/style.css
+++ b/style.css
@@ -42,16 +42,7 @@
 }
 
 html, body {
-    height: 100%
-}
-
-h1 {
-    font-size: 3.6rem;    
-    margin-top: 2rem;   
-}
-
-h2 {
-    font-size: 2rem;
+    height: 100vh
 }
 
 .game {
@@ -128,11 +119,18 @@ h2 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 100px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+h1 {
+    font-size: 3rem;
+    margin-top: 1rem;
 }
 
 h2 {
-    font-size: 2rem;
+    font-size: 1.6rem;
+    border-bottom: 2px var(--primary-color) solid;
 }
 
 #robot-window, #friend-window {
@@ -152,40 +150,36 @@ h2 {
     height: 120px;
 }
 
+#robot-window h2::before {
+    display: block;
+    width: 70px;
+    height: 70px;
+    content: '';
+    background-image: url(./img/bot-icon-yellow.svg);
+    background-size: 130%;
+    background-position: center;
+    margin-inline: auto;
+    margin-bottom: 0;
+}
+
 #robot-window input[type="radio"] {
     appearance: none;
     display: block;
 }
 
-button.start {
-    border: none;
-    outline: none;
-
-    font-size: 3rem;
-    font-weight: bold;
-    color: var(--background-color);
-    background-color: var(--primary-color);
-    
-    width: 480px;
-    border-radius: var(--border-radius);
-
-    margin-top: auto;
-    margin-bottom: 30px;
-    padding: 10px 16px;
-
-}
-
 .sides {
     display: flex;
     gap: 2.5rem;
-    margin-block: 50px;
+    margin-top: 0.6rem;
 }
 
 .sides input + label {
-    width: 240px;
-    height: 240px;
+    min-width: 130px;
+    min-height: 130px;
     border-radius: var(--border-radius);
-    transition: background 0.1s linear;
+    border: 1px solid transparent;
+
+    transition: background 0.1s, border 0.1s;
     &[for="sideX"] {
         background: url(./img/cross_yellow.svg) transparent;
         background-position: center;
@@ -201,8 +195,11 @@ button.start {
     }
 }
 
-.sides input:checked + label,
 .sides input:hover + label {
+    border: 5px var(--primary-color) solid;
+}
+
+.sides input:checked + label {
     background-color: var(--primary-color);
 
     &[for="sideX"] {
@@ -218,25 +215,56 @@ button.start {
         background-repeat: no-repeat;
         background-size: 75%;    
     }
-    
 }
 
 .difficulties {
-    margin-top: 35px;
+    margin-top: .4rem;
 }
 
 .difficulties label{
-    margin-top: 2rem;
-    padding: 6px 12px;
-    font-size: 2rem;
-    text-align: center;
+    width: 200px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1.2rem;
+    padding: 4px 12px;
+    font-size: 1.8rem;
     font-weight: bold;
     border-radius: 5px;
+    border: 1px solid transparent;
+    transition: border 0.2s linear;
 }
 
-.difficulties input:checked + label,
-.difficulties input:hover + label{
+.difficulties input:checked + label {
     background-color: var(--primary-color);
     color: var(--background-color);
-    transition: var(--background-color) 0.1s linear;
+}
+
+.difficulties input:hover + label {
+    border: 4px var(--primary-color) solid;
+}
+
+button.start {
+    border: none;
+    outline: none;
+
+    font-size: 3rem;
+    font-weight: bold;
+    color: var(--background-color);
+    background-color: var(--primary-color);
+    
+    width: 340px;
+    height: 100px;
+    border: 1px solid var(--primary-color);
+    border-radius: var(--border-radius);
+
+    margin-top: 1.2rem;
+    transition: all .2s linear;
+
+    &:hover, &:active {
+        background-color: var(--background-color);
+        color: var(--primary-color);
+        border-width: 10px;
+    }
 }
