--- a/style.css
+++ b/style.css
@@ -36,8 +36,10 @@
 
 :root {
     --background-color: #ff3838;
+    --background-color-darker: #1510193d;
     --primary-color: #ffae00;
     --border-radius: 24px;
+    --mark-color: #ffffffce;
 }
 
 html, body {
@@ -45,52 +47,22 @@ html, body {
 }
 
 .game {
+    height: 100%;
+
     display: none;
-    /*display: flex; */
     flex-direction: column;
     align-items: center;
-}
+    justify-content: space-between;
+    text-align: center;
 
-.gameboard {
-    border: 2px solid black;
-    width: 600px;
-    height: 600px;
-    padding: 2px;
-
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 1fr;
-    grid-gap: 2px;
-}
-
-.cell {
-    border: 2px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 5rem;
-    background-color: rgb(131, 141, 122);
-    background-size: 60%;
-    background-repeat: no-repeat;
-    background-position: center;
-
-    & :hover {
-        border: 2px solid black;
-    }
-
-    &.winning-cell {
-        color: orange;
-        font-weight: 900;
-    }
-}
-
-.cell.xMark {
-    background-image: url(./img/cross.svg);
+    background-color: var(--background-color);
+    color: var(--primary-color);
+    padding-block: 50px;
 
 }
 
-.cell.oMark {
-    background-image: url(./img/circle.svg);
+.game h1 {
+    font-size: 3rem;
 }
 
 .player-turn {
@@ -100,14 +72,90 @@ html, body {
     color: black;
 }
 
-.player-turn > .active{
-    color:red;
+.player-turn > * {
+    width: 90px;
+    height: 90px;
+
+    border-radius: 16px;
+
+    &#xTurn {
+        background: url(img/cross_yellow.svg) transparent;
+        background-size: 70%;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    &#oTurn {
+        background: url(img/circle_yellow.svg) transparent;
+        background-size: 70%;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+}
+
+#xTurn.active{
+    background-color: var(--primary-color);
+    background-image: url(img/cross_red.svg);
+}
+
+#oTurn.active {
+    background-color: var(--primary-color);
+    background-image: url(img/circle_red.svg);
+}
+
+.gameboard {
+    width: min(85vw, 500px);
+    height: min(85vw, 500px);
+    margin-block: 1rem;
+    
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 1fr;
+    grid-gap: 10px;
+}
+
+button.cell {
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 5rem;
+    color: #fff;
+    background-image: transparent;
+    background-color: var(--background-color-darker);
+    background-size: 0%;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    transition: background-size 200ms ease-in-out;
+
+    &.xMark {
+        background-size: 60%;
+        background-image: url(./img/cross_dark.svg);
+        transition: background-size 200ms ease-in-out;
+    }
+
+    &.oMark {
+        background-size: 60%;
+        background-image: url(./img/circle_dark.svg);
+        transition: background-size 200ms ease-in-out;
+    }
+}
+
+.cell.xMark.winning-cell {
+    background-image: url(./img/cross_yellow.svg);
+}
+
+.cell.oMark.winning-cell {
+    background-image: url(./img/circle_yellow.svg);
 }
 
 .winner {
     font-size: 1.6rem;
 }
-
 
 #mode-window, #robot-window, #friend-window {
     background-color: var(--background-color);
@@ -118,6 +166,7 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 
 #mode-window {
@@ -129,7 +178,6 @@ html, body {
 
     & h1 {
         font-size: 3rem;
-        
     }
     
     & h2 {
@@ -207,16 +255,10 @@ html, body {
 
     &[for="sideX"] {
         background-image: url(./img/cross_red.svg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: 75%;    
     }
 
     &[for="sideO"] {
         background-image: url(./img/circle_red.svg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: 75%;    
     }
 }
 
