--- a/style.css
+++ b/style.css
@@ -65,41 +65,44 @@ html, body {
     font-size: 3rem;
 }
 
-.player-turn {
+.player-info {
     display: flex;
     gap: 3rem;
     font-size: 3rem;
-    color: black;
 }
 
-.player-turn > * {
-    width: 90px;
-    height: 90px;
+.player-info > * {
+    width: 100px;
+    height: 180px;
 
-    border-radius: 16px;
-
-    &#xTurn {
-        background: url(img/cross_yellow.svg) transparent;
-        background-size: 70%;
-        background-position: center;
-        background-repeat: no-repeat;
-    }
-    &#oTurn {
-        background: url(img/circle_yellow.svg) transparent;
-        background-size: 70%;
-        background-position: center;
-        background-repeat: no-repeat;
+    & > .turn {
+        width: 100%;
+        height: 90px;
+        border-radius: 1rem;
     }
 }
 
-#xTurn.active{
-    background-color: var(--primary-color);
-    background-image: url(img/cross_red.svg);
-}
+#xTurn {
+    background: url(img/cross_yellow.svg) transparent;
+    background-size: 70%;
+    background-position: center;
+    background-repeat: no-repeat;
 
-#oTurn.active {
-    background-color: var(--primary-color);
-    background-image: url(img/circle_red.svg);
+    &.active{
+        background-color: var(--primary-color);
+        background-image: url(img/cross_red.svg);
+    }
+}
+#oTurn {
+    background: url(img/circle_yellow.svg) transparent;
+    background-size: 70%;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    &.active {
+        background-color: var(--primary-color);
+        background-image: url(img/circle_red.svg);
+    }
 }
 
 .gameboard {
