--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
 
 
 :root {
-    --background-color: #ff3838;
+    --background-color: #e65454;
     --background-color-darker: #1510193d;
     --primary-color: #ffae00;
     --border-radius: 24px;
