Change color pallete and svgs' colors
Changed background color to blue, and primary color to orange yellow.

--- a/style.css
+++ b/style.css
@@ -35,9 +35,9 @@
 
 
 :root {
-    --background-color: #e65454;
+    --background-color: #355c88;
     --background-color-darker: #1510193d;
-    --primary-color: #ffae00;
+    --primary-color: #ffaf38;
     --border-radius: 24px;
     --mark-color: #ffffffce;
 }
