--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ html, body {
 
 .player-info > * {
     width: 100px;
-    height: 180px;
+    height: 150px;
 
     & > .turn {
         width: 100%;
@@ -82,7 +82,8 @@ html, body {
     }
 
     & .score {
-        margin-top: 4px;
+        height: 40px;
+        margin-top: 16px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -116,8 +117,8 @@ html, body {
 .gameboard {
     width: min(85vw, 500px);
     height: min(85vw, 500px);
-    margin-block: 1rem;
-    
+    margin-top: 12px;
+    margin-bottom: 1rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 1fr;
@@ -154,6 +155,10 @@ button.cell {
         background-image: url(./img/circle_dark.svg);
         transition: background-size 200ms ease-in-out;
     }
+
+    &:hover {
+        box-shadow: 0 0 16px #5d80a8a9;
+    }
 }
 
 .cell.xMark.winning-cell {
@@ -166,7 +171,7 @@ button.cell {
 
 .winner {
     width: 180px;
-    height: 50px;
+    height: 40px;
     font-size: 1.8rem;
 
     display: flex;
@@ -176,7 +181,7 @@ button.cell {
 
 .nav-buttons {
     width: min(85vw, 500px);
-    height: 50px;
+    height: 60px;
     display: flex;
     padding-inline: 6px;
 }
@@ -201,20 +206,41 @@ button.cell {
 }
 
 .nav-buttons .nextRnd {
+    width: 140px;
+    height: 40px;
+
     margin-left: auto;
     margin-right: 0;
-    width: 140px;
-
+    font-size: 1.2rem;
     color: var(--background-color);
     background-color: var(--primary-color);
-    border: 0px solid var(--primary-color);
-    border-radius: 6px ;
+    border: 5px solid var(--primary-color);
+    border-radius: 6px;
+    transition: all .2s;
 
-    transition: border .1s, background .2s, color .2s;
     &:hover {
-        border-width: 5px;
         background-color: var(--background-color); 
         color: var(--primary-color);
+    }
+}
+
+button.new-game {
+    width: 140px;
+    height: 60px;
+    color: #fff;
+    border: none;
+    outline: none;
+    background: none;
+    font-weight: bold;
+    font-size: 1.4rem;
+
+    margin-top: 16px;
+    padding: 4px 10px;
+    border-radius: 12px;
+    border: 4px solid var(--background-color-darker);
+    
+    &:hover {
+        box-shadow: 0 0 16px #00000079;
     }
 }
 
