--- a/style.css
+++ b/style.css
@@ -51,10 +51,12 @@
     --mark-color: #ffffffce;
     --page-padding: 30px;
     --gameboard-width: calc(300px + 10vw);
+    --my-margin-top: 16px;
 }
 
 html {
     height: 100svh;
+    min-height: 700px;
 }
 
 body {
@@ -68,6 +70,7 @@ body {
     height: 100%;
     display: none;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     text-align: center;
 
@@ -83,7 +86,6 @@ body {
 .player-info {
     display: flex;
     gap: clamp(110px, 35vw, 150px);
-    margin-top: 16px;
 }
 
 .player-info > * {
@@ -101,7 +103,7 @@ body {
 
     & .score {
         width: 50%;
-        margin-top: 16px;
+        margin-top: .5rem;
         font-size: 2.4rem;
     }
 }
@@ -244,7 +246,6 @@ button.new-game {
     font-weight: bold;
     font-size: 1.4rem;
 
-    margin-top: 16px;
     padding: 4px 10px;
     border-radius: 12px;
     border: 4px solid var(--background-color-darker);
@@ -262,13 +263,36 @@ button.new-game {
 
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     text-align: center;
-    gap: 16px;
+   
+    & > * {
+        margin-top: var(--my-margin-top);
+    }
+
+    & > button.start {
+        margin-top: 32px;
+    }
 }
 
-#mode-window {
-    justify-content: center;
+#mode-window, #robot-window, #friend-window, #robotTwo-window, .game {
+    & > * {
+        margin-top: var(--my-margin-top);
+    }
+
+    & h1 {
+        font-size: 3rem;
+    }
+    
+    & h2 {
+        font-size: 1.6rem;
+        border-bottom: 2px var(--primary-color) solid;
+    }
+}
+
+#robot-window, #friend-window, #robotTwo-window {
+    display: none;
 }
 
 #mode-window button.option {
@@ -294,10 +318,6 @@ button.new-game {
     box-shadow: 5px 5px var(--background-color-darker);
     transition: all 0.1s linear;
 
-    & + button {
-        margin-top: 1rem;
-    }
-
     &:hover {
         background-color: #3f35473d;;
     }
@@ -318,27 +338,6 @@ button.option img {
 
 button#bot-against-bot img {
     height: 70px;
-}
-
-
-#robot-window, #friend-window, #robotTwo-window {
-    justify-content: start;
-    & > * {
-        margin-top: 16px;
-    }
-
-    & h1 {
-        font-size: 3rem;
-    }
-    
-    & h2 {
-        font-size: 1.6rem;
-        border-bottom: 2px var(--primary-color) solid;
-    }
-}
-
-#robot-window, #friend-window, #robotTwo-window {
-    display: none;
 }
 
 #mode-window .options {
@@ -423,7 +422,7 @@ button#bot-against-bot img {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 1.2rem;
+    margin-top: 1rem;
     padding: 4px 12px;
     font-size: 1.8rem;
     font-weight: bold;
@@ -458,9 +457,7 @@ button.start {
     height: 80px;
     border: 1px solid var(--primary-color);
     border-radius: var(--border-radius);
-    
     transition: all .2s linear;
-    margin-top: auto;
 
     &:hover, &:active {
         background-color: var(--background-color);
@@ -479,10 +476,6 @@ button.start {
     background-position: center;
     margin-inline: auto;
     margin-bottom: 0;
-}
-
-#friend-window p + p{
-    margin-top: 1.4rem;
 }
 
 #friend-window label {
